java 17 -> 21 and build.gradle updates and cleanup