@@ -74,7 +74,7 @@ public class DocumentHandlerTest {
     void should_add_document_to_non_empty_list() {
         DocumentWithMetadata documentWithMetadata = createDocumentWithMetadata();
         List<IdValue<DocumentWithMetadata>> documents = newArrayList(new IdValue<>("1", createDocumentWithMetadata()));
-        List<IdValue<DocumentWithMetadata>> allDocuments = newArrayList(documents.get(0), new IdValue<>("2", documentWithMetadata));
+        List<IdValue<DocumentWithMetadata>> allDocuments = newArrayList(documents.getFirst(), new IdValue<>("2", documentWithMetadata));
 
         when(asylumCase.read(documentField))
             .thenReturn(Optional.of(documents));
@@ -101,7 +101,7 @@ public class DocumentHandlerTest {
 
         DocumentWithMetadata newDocumentWithMetadata = createDocumentWithMetadata();
         List<IdValue<DocumentWithMetadata>> existingDocuments = newArrayList(new IdValue<>("1", createDocumentWithMetadata()));
-        List<IdValue<DocumentWithMetadata>> allDocuments = newArrayList(existingDocuments.get(0), new IdValue<>("2", newDocumentWithMetadata));
+        List<IdValue<DocumentWithMetadata>> allDocuments = newArrayList(existingDocuments.getFirst(), new IdValue<>("2", newDocumentWithMetadata));
 
         when(asylumCase.read(documentField))
             .thenReturn(Optional.of(existingDocuments));
@@ -128,7 +128,7 @@ public class DocumentHandlerTest {
 
         DocumentWithMetadata newDocumentWithMetadata = createDocumentWithMetadata();
         List<IdValue<DocumentWithMetadata>> existingDocuments = newArrayList(new IdValue<>("1", createDocumentWithMetadata()));
-        List<IdValue<DocumentWithMetadata>> allDocuments = newArrayList(existingDocuments.get(0), new IdValue<>("2", newDocumentWithMetadata));
+        List<IdValue<DocumentWithMetadata>> allDocuments = newArrayList(existingDocuments.getFirst(), new IdValue<>("2", newDocumentWithMetadata));
 
         when(asylumCase.read(documentField))
             .thenReturn(Optional.of(existingDocuments));
